# srt2audio

./: .gitignore  README.md  pyproject.toml  requirements.txt
.agents/skills/testing-srt2audio/: SKILL.md
samples/: sample.srt
srt2audio/: __init__.py  __main__.py  audio.py  gui.py  processor.py  srt_parser.py  tts_client.py
tools/: mock_tts_server.py
