[project]
name = "srt2audio"
version = "0.1.0"
description = "Convert SRT subtitle files to timeline-aligned audio via the CapCut TTS wrapper API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "requests>=2.28",
    "pydub>=0.25",
]

[project.scripts]
srt2audio = "srt2audio.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["srt2audio"]
